--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,8 @@ resolver: lts-18.28
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
-
 extra-deps:
-- copied_dependencies/NoTrace-0.3.0.4
+# - copied_dependencies/NoTrace-0.3.0.4
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
